# echostate

./: .gitignore  Cleanup.py  README.md  pyproject.toml  requirements.txt  setup.py  testtything.py
echostate/: ESN.py  reservoir.py  trainer.py  utils.py
examples/Heisenberg_Chain/: Heisenberg_sim.py  Solving_Solution.py
examples/Heisenberg_Chain/cache/: history_dt0.01_steps2000.pkl  trainedmodel_Stps10_Qbts3_dt0_01.pt  trainedmodel_Stps5_Qbts3_dt0_01.pt
examples/Heisenberg_Chain/trained_esns/: best31415_Qbts10_params_by_dt.json  best3141_Qbts5_params_by_dt.json  esnStudy_Seed31415_Qbts10_dt0.15_dpth60.db  esnStudy_Seed31415_Qbts10_dt0_15.db  esnStudy_Seed3141_Qbts5_dt0.15000000000000002_dpth6.db  esnStudy_Seed3141_Qbts5_dt0.15_dpth6.db  esnStudy_Seed3141_Qbts5_dt0.1_dpth6.db  esnStudy_Seed3141_Qbts5_dt0.20000000000000004_dpth6.db  esnStudy_Seed3141_Qbts5_dt0.25_dpth6.db  esnStudy_Seed3141_Qbts5_dt0.2_dpth6.db  esnStudy_Seed3141_Qbts5_dt0.30000000000000004_dpth6.db  esnStudy_Seed3141_Qbts5_dt0.3500000000000001_dpth6.db  esnStudy_Seed3141_Qbts5_dt0.35_dpth6.db  esnStudy_Seed3141_Qbts5_dt0.3_dpth6.db  esnStudy_Seed3141_Qbts5_dt0.40000000000000013_dpth6.db  esnStudy_Seed3141_Qbts5_dt0.4_dpth6.db  esnStudy_Seed314_Qbts3_dt0.25_dpth6.db  esnStudy_SeedNone_Qbts5_dt0.25_dpth6.db  trainedmodel_Seed31415_Qbts10_dt0_15.pt
tests/: test_esn.py  test_reservoir.py  test_trainer.py  test_utils.py
